# cpplox

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
cmake/: CompilerWarnings.cmake  StandardProjectSettings.cmake
cpplox/: CMakeLists.txt
cpplox/CppLox/: Base.hpp  Chunk.cpp  Chunk.hpp  Lox.cpp  Printer.cpp  Printer.hpp
cpplox/CppLox/Core/: Log.hpp
cpplox/CppLox/Debug/: Instrumentor.hpp  Printer.hpp
lox/client/: CMakeLists.txt
lox/client/Client/: Client.cpp
lox/core/: CMakeLists.txt  Core.hpp
lox/core/Core/: Base.hpp  Chunk.cpp  Chunk.hpp  Log.cpp  RLEBuffer.hpp  Stack.hpp  VirtualMachine.cpp  VirtualMachine.hpp
lox/core/Core/Debug/: Instrumentor.hpp  Printer.cpp  Printer.hpp
lox/tests/: CMakeLists.txt
lox/tests/Tests/Core/: RLEBuffer.unit.cpp
lox/tests/Tests/Example/: Factorial.cpp
